2011-12-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-erase-buffer): New.
	(epackage-devel-generate-autoloads): Use
	`epackage-erase-buffer'.
	(epackage-autoload-create-on-directory): Add argument
	EXCLUDE.
	(epackage-layout-file-name): Correct function.
	(epackage-devel-generate-uninstall): Correct variable.
	(epackage-devel-generate-autoloads): Support ignore file.

2011-12-14 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-examples):
	Adjust template string text for output file.
	(epackage--layout-mapping): add 'ignore' entry.
	(epackage-pkg-ignore-file-content): New.
	(epackage-read-file-content-regexp): New.
	(epackage-pkg-lisp-directory): Correct to use
	`insert-file-contents-literally'.
	(epackage-pkg-lisp-directory): Drop suppert for comments
	in hash-marks.

2011-12-14 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-map): Add
	`epackage-info-mode-cmd-email-upstream-ping'.
	(epackage--layout-mapping): Add examples.
	(epackage-devel-generate-examples): New.
	(epackage-devel-compose-package-dir): Use
	`epackage-devel-generate-examples'.
	(epackage-devel-generate-uninstall): New.
	(epackage-devel-information-date-versionstr): Correct
	call to `epackage-devel-information-version-main'.
	(epackage--directory-exclude-regexp): Add more directories.
	(epackage-files-recursive-lisp): Add argument EXCLUDE.
	(epackage-devel-generate-compile-main): Use
	'epackage--lisp-file-exclude-regexp'.
	(epackage--lisp-file-exclude-regexp): New.
	(epackage--layout-template-info): Move Vcs-Args.

2011-12-13 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--batch-ui-menu-string): Adjust wording.
	(epackage-files-recursive-lisp): Add TYPE argument.
	(epackage-devel-generate-compile-main): Correct file path
	names.

2011-12-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-princ): New.
	(epackage--princ-buffer): New.
	(epackage-ui-simple): New.